# FAIRXAI

./: .coverage  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.tml
FAIRXAI/: dataset.py  handler.py
docs/: Makefile  conf.py  generate_docs.py  index.rst  make.bat  modules.rst
docs/html/: .buildinfo  FAIRXAI.data_ingestion.html  FAIRXAI.html  FAIRXAI.ui.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: FAIRXAI.rst  FAIRXAI.ui.rst  api_reference.rst  conf.py  fairxai.app.rst  fairxai.bbox.rst  fairxai.data.dataset.rst  fairxai.data.descriptor.rst  fairxai.data.rst  fairxai.explain.adapter.rst  fairxai.explain.explaination.rst  fairxai.explain.explainer_manager.rst  fairxai.explain.rst  fairxai.project.rst  fairxai.rst  index.rst  modules.rst  usage.rst  workflow.rst
fairxai/: dataset.py  handler.py  main.py
fairxai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fairxai/app/: app.py  doc_page.py  explainability_page.py  home_page.py
fairxai/bbox/: __init__.py  bbox.py  bbox_factory.py  sklearn_bbox.py  torch_bbox.py
fairxai/dataset/: __init__.py  dataset.py  dataset_factory.py  image_dataset.py  tabular_dataset.py  text_dataset.py  timeserie_dataset.py  timeseries_dataset.py
fairxai/descriptor/: image_descriptor.py  tabular_descriptor.py  timeserie_descriptor.py
fairxai/project/: project.py  project_registry.py
tests/: scam_usecase.py  sias_usecase.py
tests/project/: test_project.py  test_project_registry.py
(+44 files in other folders)
