[project]
name = "fairxai"
version = "0.1.0"
description = "Framework FAIRXAI per la generazione e visualizzazione di spiegazioni XAI"
authors = [
    { name = "KODE SRL"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit",
    "scikit-learn",
    "torch",
    "numpy==1.26.4",
    "pandas==2.3.3",
    #"shap==0.49.1",
    #"lime==0.2.0.1",
    #"torchcam==0.4.1",
    "anchor-exp==0.0.2.0",
    "pillow==12.0.0",
    "matplotlib==3.10.7",
    #"tabulate2==1.10.2",
]

[project.scripts]
fairxai = "fairxai.main:main"

[project.optional-dependencies]

dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pylint==4.0.2",
    "setuptools==80.9.0",
]

docs = [
    "sphinx==8.2.3",
    "sphinx_rtd_theme==3.0.2",
    "sphinx_material",
    "sphinxcontrib-mermaid==1.0.0",
    "graphviz==0.21",
    "pydeps==3.0.1",
    "PyYAML==6.0.3",
]

all = [
    "fairxai[dev,docs]" # Permette di installare tutte le dipendenze con un solo comando
]